macviews: use system text selection color

There's a user preference for the text selection color, which we should honor
even in Harmony. If it looks weird that's up to the user.

BUG=647521

Review-Url: https://codereview.chromium.org/2355433002
Cr-Commit-Position: refs/heads/master@{#419723}

Former-commit-id: ccc35e674e1e15fd87bfc994b470e4c283df62c4